[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/UI/knot_sep2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Themes/main_font_tiny.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Themes/accid___.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Themes/main_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=5]
[ext_resource path="res://mods/Sulayre.Lure/Scenes/LureKit/Tabs/Tabs/TitleCreator/TitleEditor.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=9]
size = 56
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Themes/accid___.ttf"

[sub_resource type="DynamicFont" id=13]
size = 42
outline_size = 3
outline_color = Color( 0.0627451, 0.109804, 0.192157, 1 )
extra_spacing_char = 2
font_data = SubResource( 1 )

[node name="title" type="Panel"]
anchor_left = 0.075
anchor_top = 0.106
anchor_right = 0.925
anchor_bottom = 0.894
margin_left = 0.0999985
margin_top = -0.480003
margin_right = -0.100098
margin_bottom = 0.479919
size_flags_vertical = 0
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.0
margin_top = 30.0
margin_right = -34.0
margin_bottom = -85.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1563.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 9 )
text = "Title Creator"
align = 1

[node name="sep2" type="TextureRect" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 1563.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 1563.0
margin_bottom = 736.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 1563.0
margin_bottom = 100.0

[node name="GameExeFolder" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 779.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 7
size_flags_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder"]
margin_top = 7.0
margin_right = 779.0
margin_bottom = 41.0

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder/HBoxContainer"]
margin_right = 83.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Title ID "

[node name="InvalidID" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 87.0
margin_right = 779.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.67451, 0, 0.160784, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Invalid Identifier!"
align = 2

[node name="Field" type="Panel" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder"]
margin_top = 45.0
margin_right = 779.0
margin_bottom = 93.0
rect_min_size = Vector2( 175, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="IDField" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
margin_left = 3.62396e-05
margin_right = 6.10352e-05
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
text = "title"
middle_mouse_paste_enabled = false
smooth_scrolling = true

[node name="GameExeFolder2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 1073.0
margin_right = 1273.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 6
size_flags_vertical = 0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder2"]
margin_top = 7.0
margin_right = 200.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "In-game ID"
align = 1

[node name="IdPreview" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder2"]
unique_name_in_owner = true
margin_top = 45.0
margin_right = 200.0
margin_bottom = 93.0
rect_min_size = Vector2( 200, 48 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 0.835294, 0.666667, 0.45098, 1 )
custom_fonts/font = ExtResource( 4 )
text = "mod_id.title"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder2/IdPreview"]
modulate = Color( 0.415686, 0.266667, 0.12549, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 6
custom_styles/panel = ExtResource( 5 )

[node name="GameExeFolder4" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 1563.0
margin_bottom = 204.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 5
size_flags_vertical = 0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/GameExeFolder4"]
margin_top = 7.0
margin_right = 1563.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "Title Name"

[node name="Field" type="Panel" parent="VBoxContainer/VBoxContainer/GameExeFolder4"]
margin_top = 45.0
margin_right = 1563.0
margin_bottom = 93.0
rect_min_size = Vector2( 175, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="NameField" type="TextEdit" parent="VBoxContainer/VBoxContainer/GameExeFolder4/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
margin_left = 3.62396e-05
margin_right = 6.10352e-05
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
middle_mouse_paste_enabled = false
smooth_scrolling = true

[node name="GameExeFolder2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 1563.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/GameExeFolder2"]
margin_top = 7.0
margin_right = 1563.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "Title Description"

[node name="Field" type="Panel" parent="VBoxContainer/VBoxContainer/GameExeFolder2"]
margin_top = 45.0
margin_right = 1563.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="DescField" type="TextEdit" parent="VBoxContainer/VBoxContainer/GameExeFolder2/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
margin_left = 3.62396e-05
margin_right = 6.10352e-05
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
middle_mouse_paste_enabled = false
smooth_scrolling = true

[node name="GameExeFolder3" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 1563.0
margin_bottom = 423.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/GameExeFolder3"]
margin_right = 1563.0
margin_bottom = 34.0

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/GameExeFolder3/HBoxContainer"]
margin_right = 309.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Title Text (Supports BBCode!)"

[node name="InvalidTitle" type="Label" parent="VBoxContainer/VBoxContainer/GameExeFolder3/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 313.0
margin_right = 1563.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.67451, 0, 0.160784, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Title text can't be empty!"
align = 2

[node name="Label5" type="Label" parent="VBoxContainer/VBoxContainer/GameExeFolder3"]
margin_top = 38.0
margin_right = 1563.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.835294, 0.666667, 0.45098, 1 )
custom_fonts/font = ExtResource( 2 )
text = "This is the text that is gonna show up below the player's username"
autowrap = true

[node name="Field" type="Panel" parent="VBoxContainer/VBoxContainer/GameExeFolder3"]
margin_top = 63.0
margin_right = 1563.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="TextField" type="TextEdit" parent="VBoxContainer/VBoxContainer/GameExeFolder3/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
margin_left = 3.62396e-05
margin_right = 6.10352e-05
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
middle_mouse_paste_enabled = false
smooth_scrolling = true

[node name="sep3" type="TextureRect" parent="VBoxContainer/VBoxContainer"]
margin_top = 427.0
margin_right = 1563.0
margin_bottom = 459.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 510.0
margin_right = 1563.0
margin_bottom = 544.0
size_flags_vertical = 10
custom_fonts/font = ExtResource( 4 )
text = "PREVIEW"
align = 1
valign = 2

[node name="TitlePreview" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 548.0
margin_right = 1563.0
margin_bottom = 599.0
rect_min_size = Vector2( 0, 48 )
rect_clip_content = false
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
fit_content_height = true

[node name="CreateButton" type="Button" parent="."]
anchor_left = 0.32
anchor_top = 0.941
anchor_right = 0.683
anchor_bottom = 1.059
margin_left = -0.320007
margin_top = 18.2679
margin_right = -0.15802
margin_bottom = -18.268
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 64 )
size_flags_horizontal = 4
size_flags_vertical = 6
disabled = true
text = "Add to Mod"

[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/GameExeFolder/Field/IDField" to="." method="_on_GamePath_text_changed"]
[connection signal="focus_exited" from="VBoxContainer/VBoxContainer/GameExeFolder4/Field/NameField" to="." method="_on_NameField_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/GameExeFolder3/Field/TextField" to="." method="_on_TextField_text_changed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
